[package]
name = "ha-events"
version = "0.1.0"
authors = ["James Titcumb <james@asgrim.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
edid = "0.3.0"
