[package]
name = "ha-events"
version = "0.1.0"
authors = ["James Titcumb <james@asgrim.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.1.4", features = ["termination"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
edid = "0.3.0"
log = "0.4.8"
log4rs = "0.12.0"
dbus = "0.8.4"
